# yew-actix-postgres

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml
backend/docker/: Dockerfile  init.sql
backend/migrations/: down.sql  up.sql
backend/src/: main.rs
backend/src/config/: crypto.rs  mod.rs
backend/src/handlers/: major_handlers.rs  mod.rs  user_handlers.rs
backend/src/models/: medicine.rs  mod.rs  user.rs
backend/src/repositories/: medicine_repository.rs  mod.rs  user_repository.rs
db/: Dockerfile  init.db.sh  up.sql
frontend/: Cargo.toml  index.html
frontend/resource/style/: style.scss
frontend/src/: main.rs
frontend/src/models/: item.rs  medicines.rs  mod.rs  user.rs
frontend/src/pages/: contact.rs  detail.rs  info.rs  login.rs  mod.rs  new_medicine.rs  profile.rs  search.rs  signup.rs  store.rs
frontend/src/sections/: footer.rs  header.rs
frontend/src/utils/: error.rs  error_to_str.rs  image.rs  mod.rs  not_found.rs  requests.rs
frontend/style/: style.scss
postgre_docker/: Dockerfile  up.sql
tests/: script_1.js
web/: .env  Cargo.toml  Dockerfile
web/src/: main.rs
web/src/config/: crypto.rs
web/src/handlers/: creator_handlers.rs  major_handlers.rs  medicine_handlers.rs  mod.rs  pharmacy_handler.rs  user_handlers.rs
web/src/models/: creator.rs  medicine.rs  mod.rs  pharmacy.rs  user.rs
web/src/repositories/: creator_repository.rs  medicine_repository.rs  mod.rs  user_repository.rs
