[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Selyavin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-http = "2.2.2"
time = "0.2.27"
diesel = "1.4.8"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sha2 = "0.10.2"
bip32 = "0.3.0"