[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Nikita Selyavin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
bcrypt = "0.12.1"
simple_logger = "2.1.0"
log = "0.4.16"
jsonwebtoken = "8.1.0"
rbson = "2.0.3"
rbatis = {version = "3.1.6", features = ["postgres"]}