[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16.0"
wasm-logger = "0.2.0"
log = "0.4.16"
wasm-bindgen = "0.2.79"
web-sys = "0.3.56"
gloo-history = "0.1.0"
gloo-utils = "0.1.2"
gloo-net = "0.2"
validator = { version = "0.14.0", features = ["derive"] }
serde = "1.0.136"
bcrypt = "0.12.1"
async-std = "1.11.0"
tokio = { version = "1.18", features = ["full"] }
crossbeam = "0.8.1"
getrandom = { version = "0.2", features = ["js"] }

[cargo-web]
minimum-version = "0.6.0"
